--- a/apps/suppliers/templates/gestion_proveedores.html
+++ b/apps/suppliers/templates/gestion_proveedores.html
@@ -237,11 +237,11 @@
                       <td>
                         <button class="btn btn-sm btn-warning" onclick="editarProveedor('{{ p.id }}')" title="Editar"><i class="bi bi-pencil"></i></button>
                         {% if p.estado == "Activo" %}
-                          <button class="btn btn-outline-secondary btn-sm" onclick="desactivarProveedor('{{ p.id }}')" title="Desactivar">
+                          <button class="btn btn-secondary btn-sm" onclick="desactivarProveedor('{{ p.id }}')" title="Desactivar">
                             <i class="bi bi-person-dash"></i>
                           </button>
                         {% else %}
-                          <button class="btn btn-outline-success btn-sm" onclick="reactivarProveedor('{{ p.id }}')" title="Reactivar">
+                          <button class="btn btn-success btn-sm" onclick="reactivarProveedor('{{ p.id }}')" title="Reactivar">
                             <i class="bi bi-person-check"></i>
                           </button>
                         {% endif %}
