--- a/apps/account/templates/password_rest_confirm.html
+++ b/apps/account/templates/password_rest_confirm.html
@@ -7,7 +7,7 @@
         <div class="card shadow-sm">
             <div class="card-body p-4">
                 <div class="text-center mb-3">
-                    <img src="{% static 'img/Lilis.png' %}" alt="Lilis" style="height:64px">
+                    <img src="{% static 'img/lilis.png' %}" alt="Lilis" style="height:64px">
                     <h4 class="mt-2">Crear nueva contraseña</h4>
                     <p class="text-muted small mb-0">Tu token fue validado. Define una contraseña segura</p>
                 </div>
