--- a/apps/account/templates/change_password.html
+++ b/apps/account/templates/change_password.html
@@ -9,7 +9,7 @@
         <div class="card shadow-sm">
             <div class="card-body p-4">
                 <div class="text-center mb-3">
-                    <img src="{% static 'img/Lilis.png' %}" alt="Lilis" style="height:56px">
+                    <img src="{% static 'img/lilis.png' %}" alt="Lilis" style="height:56px">
                     <h4 class="mt-2">Cambiar contraseña</h4>
                 </div>
 
