--- a/apps/account/templates/login.html
+++ b/apps/account/templates/login.html
@@ -10,7 +10,7 @@
             <div class="card p-3 shadow-sm border-0 rounded-4">
                 <div class="card-body">
                     <div class="text-center mb-4">
-                        <img src="{% static 'img/Lilis.png' %}" alt="Logo Dulcería Lilis" style="height: 72px;">
+                        <img src="{% static 'img/lilis.png' %}" alt="Logo Dulcería Lilis" style="height: 72px;">
                         <h3 class="card-title text-center mt-3 fw-bold text-danger">ERP Lilis</h3>
                     </div>
 
